- Added a uriToGoogleCacheUri transform.
- Changed usufy-launcher.py and phonefy-launcher.py to usufy.py and phonefy.py.
- Changed maltfy folder to transforms.
- Opening .onion URI using onion.cab service.
- Updated transforms to match the new distribution.
- Added BeautifulSoup as a needed llibrary for the installation.

v0.8.3, 2015/04/09 -- Changed the structure of the returned csv files.
- Adding the possibility of creating a csv output file.

v0.8.2, 2015/04/08 -- Changed the structure of the returned json files.
- Fixed an issue that created up to n different json files.
- The returned json is a list of i3visio.objects and the list returned is now ordered and no longer linked to the nickname searched.

v0.8.1, 2015/04/08 -- Minor fixes on certain platforms which were not working.
- Fixed the self.notFoundText in: cafemom, pearltreesspoj.
- Added the self.foundText in: spoj.
- ResearchGate needs credential now.

v0.8.0, 2015/04/03 -- Improvements in the entity generation and an extensive ip-api.com support.
- Added Maltego transform: coordinatesToGoogleMapsBrowser.
- Added Maltego transform: coordinatesToTwitterBrowser.
- Added Maltego transform: domainToIp_ApiInfo.
- Added Maltego transform: ipToIp_ApiInfo.
- Added default fields to every Maltego Entity.
- Modified Maltego transform: aliasToAllProfiles.
- Modified Maltego transform: aliasToFamousPlatforms.
- Modified Maltego transform: aliasToSkypeAccounts.
- Modified Maltego transform: bitcoinAddressToBlockchainDetails.
- Modified Maltego transform: domainToGoogleSearchUriWithEmails.
- Modified Maltego transform: domainToTld.
- Modified Maltego transform: emailToAlias.
- Modified Maltego transform: emailToBreachAccounts.
- Modified Maltego transform: emailToDomain.
- Modified Maltego transform: emailToSkypeAccounts.
- Modified Maltego transform: expandPropertiesFromI3visioEntity.
- Modified Maltego transform: hashToMD5crackDotCom.
- Modified Maltego transform: ipToIp_ApiInformation.