@@ -37,6 +37,7 @@ def returnListOfCreds():
     #listCreds.append(("pokerstrategy", "<username>", "<password>"))    
     #listCreds.append(("rapid", "<username>", "<password>"))    
     #listCreds.append(("researchgate", "<username>", "<password>"))        
+    #listCreds.append(("spotify", "<username>", "<password>"))            
     #listCreds.append(("tripit", "<username>", "<password>"))
     #listCreds.append(("wordreference", "<username>", "<password>"))
     return listCreds
