@@ -59,7 +59,7 @@ except:
     sys.exit()
  
 setup(    name="osrframework",
-    version="v0.9.0a",
+    version="v0.9.0b",
     description="OSRFramework - A set of GPLv3+ OSINT tools developed by i3visio for online research.",
     author="Felix Brezo and Yaiza Rubio",
     author_email="contacto@i3visio.com",
