@@ -34,6 +34,8 @@ v0.9.0b, 2015/06/24 -- Major restructuration of the internal tool. Addition of n
 - Opening .onion URI using onion.cab service.
 - Updated transforms to match the new distribution.
 - Added BeautifulSoup as a needed llibrary for the installation.
+- Fixed bladna, breakcom, twicsy, spotify, spoj.
+- Deactivating friendsfeed, hellboundhackers and ukdebate (services unavailable for different reasons) and twitch.
 
 v0.8.3, 2015/04/09 -- Changed the structure of the returned csv files.
 - Adding the possibility of creating a csv output file.
